# numerical

./: .gitignore  Cargo.toml  README.md
examples/: double.rs  equation.rs  fem1d.rs  fit.rs  integral.rs  interpolation.rs  ode.rs  parabolic.rs  polynomial.rs  simequation.rs  test.rs
src/: difference.rs  double.rs  equation.rs  explicit.rs  fit.rs  implicit.rs  integral.rs  interpolation.rs  lib.rs  polynomial.rs  prelude.rs
src/fem/: mod.rs  poisson1d.rs
src/pde/: mod.rs  parabolic.rs
