[package]
name = "numerical"
version = "0.1.0"
authors = ["doraneko94 <shuntaro94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
intel-mkl = ["ndarray-linalg/intel-mkl", "eom/intel-mkl"]

[dependencies]
num-traits = "^0.2"
ndarray = "^0.13"
ndarray-linalg = "^0.12"
eom = { git = "https://github.com/termoshtt/eom" }